--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 .navHeader {
-  background-color: rgba(37, 44, 58,0.5);
+  background-color: rgba(37, 44, 58,0.8);
 }
 
 .navItemText {
@@ -33,8 +33,33 @@
   background-color: #252c3a;
 }
 
+.CarouselTextLeft {
+  background-color: rgba(37, 44, 58,0.8);
+  border-radius: 5px;
+  padding:5px;
+  position: absolute; 
+  bottom: 0; 
+  font-size: 2vw;
+  z-index: 200;
+  margin-bottom:10%;
+  margin-left:50%;
+  margin-right:10%;
+}
+.CarouselTextRight {
+  background-color: rgba(37, 44, 58,0.8);
+  border-radius: 5px;
+  padding:5px;
+  position: absolute; 
+  bottom: 0; 
+  font-size: 2vw;
+  z-index: 200;
+  margin-bottom:10%;
+  margin-right:50%;
+  margin-left:10%;
+}
+
 .App {
-  width: 100%;
+  
 }
 
 .App-container {
