--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+.underlined{
+  text-decoration: underline;
+}
+
 .App-logo {
   height: 40vmin;
 }
@@ -56,6 +60,38 @@
   margin-bottom:10%;
   margin-right:50%;
   margin-left:10%;
+}
+
+.ProfilePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: #2b3750;
+
+}
+
+.ProfileContainer {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.ProfileCard {
+  background-color: aliceblue;
+  color: black;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin: 1%;
+}
+
+.ProfileImageCol {
+  display:'flex';
+  flex:2;
+}
+.ProfileDescCol {
+  display:'flex';
+  flex:1;
 }
 
 .App {
