--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
-.underlined{
-  text-decoration: underline;
-}
-
 .App-logo {
   height: 40vmin;
 }
 
 .navHeader {
   background-color: rgba(37, 44, 58,0.8);
+  position:fixed !important;
+  top:0;
+  z-index: 200;
+  width: 100%;
 }
 
 .navItemText {
@@ -35,63 +35,6 @@
   
 .primaryBackGround {
   background-color: #252c3a;
-}
-
-.CarouselTextLeft {
-  background-color: rgba(37, 44, 58,0.8);
-  border-radius: 5px;
-  padding:5px;
-  position: absolute; 
-  bottom: 0; 
-  font-size: 2vw;
-  z-index: 200;
-  margin-bottom:10%;
-  margin-left:50%;
-  margin-right:10%;
-}
-.CarouselTextRight {
-  background-color: rgba(37, 44, 58,0.8);
-  border-radius: 5px;
-  padding:5px;
-  position: absolute; 
-  bottom: 0; 
-  font-size: 2vw;
-  z-index: 200;
-  margin-bottom:10%;
-  margin-right:50%;
-  margin-left:10%;
-}
-
-.ProfilePage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  background-color: #2b3750;
-
-}
-
-.ProfileContainer {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.ProfileCard {
-  background-color: aliceblue;
-  color: black;
-  font-family: Georgia, 'Times New Roman', Times, serif;
-  margin: 1%;
-}
-
-.ProfileImageCol {
-  display:'flex';
-  flex:2;
-}
-.ProfileDescCol {
-  display:'flex';
-  flex:1;
 }
 
 .App {
@@ -122,4 +65,75 @@
 .imageCard {
   border-color: gray;
   border-width: 10px;
+}
+
+/*      About Us Page Styles    */
+.BackhoeBg {
+  background-image: url("/images/backhoe.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.BackhoeSiteBg {
+  background-image: url("/images/backhoe-site.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
+
+.ProfilePage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  max-height: 100vh;
+}
+
+.ProfileCard {
+  background-color: rgba(240, 248, 255, 0.568) !important;
+  color: black;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  margin : 20%;
+}
+
+/*      Carousel Styles   */
+.CarouselTextLeft {
+  background-color: rgba(37, 44, 58,0.8);
+  border-radius: 5px;
+  padding:5px;
+  position: absolute; 
+  bottom: 0; 
+  font-size: 2vw;
+  z-index: 200;
+  margin-bottom:10%;
+  margin-left:50%;
+  margin-right:10%;
+}
+.CarouselTextRight {
+  background-color: rgba(37, 44, 58,0.8);
+  border-radius: 5px;
+  padding:5px;
+  position: absolute; 
+  bottom: 0; 
+  font-size: 2vw;
+  z-index: 200;
+  margin-bottom:10%;
+  margin-right:50%;
+  margin-left:10%;
+}
+
+/*   Text Styles     */
+.CenterText {
+  text-align: center;
+}
+
+.underlined{
+  text-decoration: underline;
+}
+
+
+/*   Content Styles    */
+.CenterContent {
+  float: none;
+  margin: 0 auto;
 }
